--- a/templates/premium/activate.html
+++ b/templates/premium/activate.html
@@ -20,8 +20,11 @@
         </main>
     {% else %}
         <h1>Статус лицензии</h1>
-        <h2>Ваша лицензия уже активирована, поэтому на этой странице будет отображён её статус</h2>
-        <p> </p>
+        <h2>Ваша лицензия уже активирована, поэтому на этой странице будет отображёна информация о ней</h2>
+        {% for i in range %}
+            <p> </p>
+        {% endfor %}
+
         <h5>Оплаченный лимит: {{ user.license_key.time_limit }}</h5>
         <h5>План: {{ user.license_key.plan }}</h5>
         <h5>Дата истечения срока: {{ user.license_key.expire_date }}<h3>
