--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -6,10 +6,10 @@
 {% endblock %}
 
 {% block body %}
-    <link rel="stylesheet" href="{% static 'main/css/index.css' %}">
     <main>
         <div class="px-4 py-5 my-5 text-center rounded-3 border shadow-lg">
-            <img  class="d-block mx-auto mb-4" src="{% static 'main/img/Screenshot_9.png' %}" alt="" width="105" height="100">
+            <img  class="d-block mx-auto mb-4" src="{% static 'main/img/Screenshot_9.png' %}"
+                  alt="" width="105" height="100">
             <h1 class="display-5 fw-bold text-body-emphasis">Univer.BY: ваш надёжный проводник в мир образования</h1>
             <div class="col-lg-6 mx-auto">
                 <p class="lead mb-4">Univer.BY — это образовательная онлайн-компания, которая помогает студентам найти
@@ -34,7 +34,9 @@
             </div>
             <div class="overflow-hidden" style="max-height: 30vh;">
                 <div class="container px-5">
-                    <img src="{% static 'main/img/Screenshot_20.png' %}" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+                    <img src="{% static 'main/img/Screenshot_20.png' %}"
+                         class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500"
+                         loading="lazy">
                 </div>
             </div>
         </div>
@@ -42,7 +44,8 @@
         <div class="px-4 py-5 my-5 text-center rounded-3 border shadow-lg">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5 rounded-3 border shadow-lg">
                 <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="{% static 'main/img/Screenshot_10.png' %}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+                    <img src="{% static 'main/img/Screenshot_10.png' %}" class="d-block mx-lg-auto img-fluid"
+                         width="700" height="500" loading="lazy" alt="">
                 </div>
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Подбор университетов</h1>
@@ -56,12 +59,17 @@
         <div class="px-4 py-5 my-5 text-center rounded-3 border shadow-lg">
             <div class="row align-items-center g-lg-5 py-5 rounded-3 border shadow-lg">
                 <div class="col-lg-7 text-center text-lg-start">
-                    <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">Удобное хранение конспектов и презентаций</h1>
-                    <p class="col-lg-10 fs-4">Мы рады представить вам нашу платформу, созданную специально для студентов. Это идеальное место для хранения и упорядочивания ваших учебных материалов.
+                    <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">
+                        Удобное хранение конспектов и презентаций</h1>
+                    <p class="col-lg-10 fs-4">Мы рады представить вам нашу платформу, созданную специально для студентов
+                        . Это идеальное место для хранения и упорядочивания ваших учебных материалов.
 
-                        Вы можете загружать конспекты, презентации, заметки и любые другие учебные ресурсы, а также делиться ими с преподавателями и однокурсниками. Это поможет вам лучше структурировать информацию и быстрее находить необходимые материалы перед экзаменами и контрольными работами.
+                        Вы можете загружать конспекты, презентации, заметки и любые другие учебные ресурсы, а также
+                        делиться ими с преподавателями и однокурсниками. Это поможет вам лучше структурировать
+                        информацию и быстрее находить необходимые материалы перед экзаменами и контрольными работами.
 
-                        Кроме того, на нашем сайте вы сможете создавать презентации, конспекты и многое другое. Просто войдите в свой аккаунт — и начните творить!</p>
+                        Кроме того, на нашем сайте вы сможете создавать презентации, конспекты и многое другое. Просто
+                        войдите в свой аккаунт — и начните творить!</p>
                 </div>
             </div>
         </div>
@@ -87,10 +95,13 @@
             <div class="py-5">
                 <h1 class="col-lg-6 mx-auto">Дополнительная информация</h1>
                 <div class="col-lg-6 mx-auto">
-                    <p class="fs-5 mb-4">После регистрации вы сможете создавать свои материалы, загружать их на платформу и делиться ими с другими пользователями.
-                        Если у вас возникнут вопросы или нужна помощь, вы всегда можете обратиться в службу поддержки. Мы постараемся помочь вам как можно быстрее.</p>
+                    <p class="fs-5 mb-4">После регистрации вы сможете создавать свои материалы, загружать их на
+                        платформу и делиться ими с другими пользователями.
+                        Если у вас возникнут вопросы или нужна помощь, вы всегда можете обратиться в службу поддержки.
+                        Мы постараемся помочь вам как можно быстрее.</p>
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                        <a class="btn btn-outline-success btn-lg px-4 gap-3" href="about"><i class="fa-solid fa-ellipsis"></i> Подробнее</a>
+                        <a class="btn btn-outline-success btn-lg px-4 gap-3" href="about">
+                            <i class="fa-solid fa-ellipsis"></i> Подробнее</a>
                     </div>
                 </div>
             </div>
