--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -12,12 +12,18 @@
             {% csrf_token %}
             <h1 class="h3 mb-3 fw-normal">С возвращением!</h1>
             <div class="form-floating">
-                <input type="text" name="username" class="form-control" id="floatingInput" placeholder="nickname">
-                <label for="floatingInput">Имя</label>
+                <input type="text" name="username" class="form-control" id="username" placeholder="nickname" required>
+                <label for="username">Имя</label>
             </div>
             <div class="form-floating">
-                <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="qwer1234">
-                <label for="floatingPassword">Пароль</label>
+                <input type="password" name="password" class="form-control" id="password" placeholder="qwer1234"
+                       required>
+                <label for="password">Пароль</label>
+            </div>
+            <div class="form-check text-start my-3">
+                <input class="form-check-input" type="checkbox" value="remember-me" id="agree" required>
+                <label class="form-check-label" for="agree">Я соглашаюсь с
+                    <a href="">условиями использования и политикой конфиденциальности</a></label>
             </div>
             <button class="btn btn-success w-100 py-2" type="submit">Вход</button>
         </form>
