--- a/templates/main/register.html
+++ b/templates/main/register.html
@@ -10,26 +10,49 @@
     <main class="form-signin w-100 m-auto">
         <form method="POST">
             {% csrf_token %}
-            <h1 class="h3 mb-3 fw-normal">Регистрация!</h1>
+            <h1 class="h3 mb-3 fw-normal">Регистрация</h1>
             <div class="form-floating">
-                <input type="text" name="username" class="form-control" id="floatingInput" placeholder="nickname">
-                <label for="floatingInput">Имя пользователя</label>
+                <input type="text" name="username" class="form-control" id="username" placeholder="nickname" required>
+                <label for="username">Имя пользователя</label>
             </div>
             <div class="form-floating">
-                <!--suppress LongLine -->
-                <input type="email" name="email" class="form-control" id="floatingInput" placeholder="example@gmail.com">
-                <label for="floatingInput">Email</label>
+                <input type="email" name="email" class="form-control" id="email" placeholder="example@gmail.com"
+                       required>
+                <label for="email">Email</label>
             </div>
             <div class="form-floating">
-                <!--suppress LongLine -->
-                <input type="password" name="password1" class="form-control" id="floatingPassword" placeholder="qwer1234">
-                <label for="floatingPassword">Пароль</label>
+                <input type="password" name="password1" class="form-control" id="password" placeholder="qwer1234"
+                       required>
+                <label for="password">Пароль</label>
             </div>
             <div class="form-floating">
-                <input type="password" name="password2" class="form-control" id="floatingPassword2" placeholder="qwer1234">
-                <label for="floatingPassword2">Подтверждение пароля</label>
+                <input type="password" name="password2" class="form-control" id="password2" placeholder="qwer1234"
+                       required>
+                <label for="password2">Подтверждение пароля</label>
+            </div>
+            <div class="form-check text-start my-3">
+                <input class="form-check-input" type="checkbox" value="remember-me" id="agree" required>
+                <label class="form-check-label" for="agree">Я соглашаюсь с
+                    <a href="">условиями использования и политикой конфиденциальности</a></label>
             </div>
             <button class="btn btn-success w-100 py-2" type="submit">Зарегистрироватся</button>
         </form>
+        <p></p>
+        <details>
+            <summary class="btn btn-outline-primary w-100 py-2">Требования к паролю</summary>
+
+            <div class="popover show bs-popover-top">
+                <div class="arrow"></div>
+                <h3 class="popover-header">Требования:</h3>
+                <div class="popover-body">
+                    <ul>
+                        <li>Пароль не должен быть слишком похож на другую вашу личную информацию</li>
+                        <li>Ваш пароль должен содержать как минимум 8 символов</li>
+                        <li>Пароль не должен быть слишком простым и распространенным</li>
+                        <li>Пароль не может состоять только из цифр</li>
+                    </ul>
+                </div>
+            </div>
+        </details>
     </main>
 {% endblock %}
