--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -10,7 +10,7 @@
         <div class="px-4 py-5 my-5 text-center rounded-3 border shadow-lg">
             <img  class="d-block mx-auto mb-4" src="{% static 'main/img/Screenshot_9.png' %}"
                   alt="" width="105" height="100">
-            <h1 class="display-5 fw-bold text-body-emphasis">Univer.BY: ваш надёжный проводник в мир образования</h1>
+            <h1 class="display-5 fw-bold">Univer.BY: ваш надёжный проводник в мир образования</h1>
             <div class="col-lg-6 mx-auto">
                 <p class="lead mb-4">Univer.BY — это образовательная онлайн-компания, которая помогает студентам найти
                     свой путь в мире высшего образования. Мы предлагаем широкий спектр услуг, направленных на облегчение
@@ -21,7 +21,7 @@
         </div>
         <p class="border-bottom"></p>
         <div class="px-4 pt-5 my-5 text-center border-bottom rounded-3 border shadow-lg">
-            <h1 class="display-4 fw-bold text-body-emphasis">Удобный дизайн</h1>
+            <h1 class="display-4 fw-bold">Удобный дизайн</h1>
             <div class="col-lg-6 mx-auto">
                 <p class="lead mb-4">Навигация интуитивно понятна, позволяя пользователям легко находить нужную
                     информацию. Структура сайта логична и удобна для восприятия.
@@ -48,7 +48,7 @@
                          width="700" height="500" loading="lazy" alt="">
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Подбор университетов</h1>
+                    <h1 class="display-5 fw-bold lh-1 mb-3">Подбор университетов</h1>
                     <p class="lead">Мы помогаем вам подобрать университеты, которые соответствуют вашим интересам,
                         целям и возможностям. Наши эксперты проводят оценку университетов по различным параметрам,
                         чтобы предложить вам наиболее подходящие варианты.</p>
@@ -59,7 +59,7 @@
         <div class="px-4 py-5 my-5 text-center rounded-3 border shadow-lg">
             <div class="row align-items-center g-lg-5 py-5 rounded-3 border shadow-lg">
                 <div class="col-lg-7 text-center text-lg-start">
-                    <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">
+                    <h1 class="display-4 fw-bold lh-1 mb-3">
                         Удобное хранение конспектов и презентаций</h1>
                     <p class="col-lg-10 fs-4">Мы рады представить вам нашу платформу, созданную специально для студентов
                         . Это идеальное место для хранения и упорядочивания ваших учебных материалов.
@@ -77,7 +77,7 @@
         <div class="container my-5">
             <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
                 <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-                    <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Научные публикации</h1>
+                    <h1 class="display-4 fw-bold lh-1">Научные публикации</h1>
                     <p class="lead">Кроме того, у нас есть ценные научные публикации, которые могут быть интересны
                         студентам и преподавателям. Чтобы ознакомиться с ними, необходимо войти в свой аккаунт или
                         зарегистрироваться. Эти материалы представляют большую ценность для образовательного процесса и
