--- a/templates/premium/pricing.html
+++ b/templates/premium/pricing.html
@@ -101,8 +101,8 @@
                 <b>Нужен более расширенный тариф? <a target="_blank" href="https://t.me/univerpayrobot">Напишите нам</a></b>
             </div>
             <p></p>
-            <div class="container">
-            <a href="{% url 'premium_activate' %}" class="btn btn-outline-warning btn-lg" style="padding-right: 30rem!important;padding-left: 30rem!important;">Активация</a>
+            <div class="d-grid gap-2">
+                <a href="{% url 'premium_activate' %}" class="btn btn-outline-warning btn-lg">Активация</a>
             </div>
         </div>
     </div>
