--- a/main/static/main/css/login.css
+++ b/main/static/main/css/login.css
@@ -12,7 +12,7 @@ body {
   z-index: 2;
 }
 
-.form-signin input[name="username"], .form-signin input[type="text"] {
+.form-signin input[name="username"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
@@ -27,6 +27,10 @@ body {
 .form-signin input[name="email"], .form-signin input[name="password1"] {
   margin-bottom: -1px;
   border-radius: 0;
+}
+
+.form-signin input[name="key"] {
+  margin-bottom: 10px;
 }
 
 div label {
