--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -3,8 +3,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
         <link rel="stylesheet" href="{% static 'main/css/details.css' %}">
         <link rel="shortcut icon" href="{% static 'main/img/Screenshot_9.png' %}" />
@@ -69,33 +69,33 @@
                         <div class="col-6 col-md-2 mb-3">
                             <h5>Главная</h5>
                             <ul class="nav flex-column">
-                                <li class="nav-item mb-2"><a href="{% url 'home' %}" class="nav-link p-0 text-body-secondary link-success">Главная</a></li>
-                                <li class="nav-item mb-2"><a href="{% url 'about' %}" class="nav-link p-0 text-body-secondary link-success">О нас</a></li>
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Универы</a></li>
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Новостной блог</a></li>
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Все функции сайта</a></li>
+                                <li class="nav-item mb-2"><a href="{% url 'home' %}" class="nav-link p-0 link-success">Главная</a></li>
+                                <li class="nav-item mb-2"><a href="{% url 'about' %}" class="nav-link p-0 link-success">О нас</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 link-success">Универы</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 link-success">Новостной блог</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 link-success">Все функции сайта</a></li>
                             </ul>
                         </div>
 
                         <div class="col-6 col-md-2 mb-3">
                             <h5>Премиум</h5>
                             <ul class="nav flex-column">
-                                <li class="nav-item mb-2"><a href="{% url 'premium' %}" class="nav-link p-0 text-body-secondary link-success">UniverPremium</a></li>
-                                <li class="nav-item mb-2"><a href="{% url 'pricing' %}" class="nav-link p-0 text-body-secondary link-success">Тарифы</a></li>
-                                <li class="nav-item mb-2"><a href="{% url 'premium_buy' %}" class="nav-link p-0 text-body-secondary link-success">Бот для оплаты</a></li>
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Акции</a></li>
-                                <li class="nav-item mb-2"><a href="{% url 'premium_activate' %}" class="nav-link p-0 text-body-secondary link-success">Активация ключа</a></li>
+                                <li class="nav-item mb-2"><a href="{% url 'premium' %}" class="nav-link p-0 link-success">UniverPremium</a></li>
+                                <li class="nav-item mb-2"><a href="{% url 'pricing' %}" class="nav-link p-0 link-success">Тарифы</a></li>
+                                <li class="nav-item mb-2"><a href="{% url 'premium_buy' %}" class="nav-link p-0 link-success">Бот для оплаты</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 link-success">Акции</a></li>
+                                <li class="nav-item mb-2"><a href="{% url 'premium_activate' %}" class="nav-link p-0 link-success">Активация ключа</a></li>
                             </ul>
                         </div>
 
                         <div class="col-6 col-md-2 mb-3">
                             <h5>Аккаунт</h5>
                             <ul class="nav flex-column">
-                                <li class="nav-item mb-2"><a href="{% url 'login' %}?red={{ request.path }}" class="nav-link p-0 text-body-secondary link-success">Вход</a></li>
-                                <li class="nav-item mb-2"><a href="{% url 'register' %}?red={{ request.path }}" class="nav-link p-0 text-body-secondary link-success">Регистрация</a></li>
-                                <li class="nav-item mb-2"><a href="{% url 'logout' %}?red={{ request.path }}" class="nav-link p-0 text-body-secondary link-success">Выход</a></li>
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Статус</a></li>
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Профиль</a></li>
+                                <li class="nav-item mb-2"><a href="{% url 'login' %}?red={{ request.path }}" class="nav-link p-0 link-success">Вход</a></li>
+                                <li class="nav-item mb-2"><a href="{% url 'register' %}?red={{ request.path }}" class="nav-link p-0 link-success">Регистрация</a></li>
+                                <li class="nav-item mb-2"><a href="{% url 'logout' %}?red={{ request.path }}" class="nav-link p-0 link-success">Выход</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 link-success">Статус</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 link-success">Профиль</a></li>
                             </ul>
                       </div>
 
@@ -132,5 +132,7 @@
             </div>
         </div>
     <script src="{% static 'main/js/script.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
