--- a/main/static/main/css/login.css
+++ b/main/static/main/css/login.css
@@ -18,13 +18,13 @@ body {
   border-bottom-left-radius: 0;
 }
 
-.form-signin input[name="password"], .form-signin input[name="password2"] {
+.form-signin input[name="password"], .form-signin select[name="user_type"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
 
-.form-signin input[name="email"], .form-signin input[name="password1"] {
+.form-signin input[name="email"], .form-signin input[name="password1"], .form-signin input[name="password2"] {
   margin-bottom: -1px;
   border-radius: 0;
 }
