--- a/templates/main/register.html
+++ b/templates/main/register.html
@@ -30,6 +30,24 @@
                        required>
                 <label for="password2">Подтверждение пароля</label>
             </div>
+            <div class="form-floating">
+                <select name="user_type" class="form-control"  id="id_user_type" required>
+                    <option value="" selected disabled>-Выберите-</option>
+                    {% for i in types %}
+                        {% if not i.id == 4 %}
+                            <option value="{{ i.id }}">{{ i.name }}</option>
+                        {% endif %}
+                    {% endfor %}
+                </select>
+                <label for="id_user_type">Зарегистрировать меня как</label>
+            </div>
+            <div id="div_id_photo" class="form-group">
+                <label for="id_photo">Фото профиля</label>
+                <div>
+                    <input type="file" name="photo" accept="image/*"
+                           class="clearablefileinput form-control-file" id="id_photo">
+                </div>
+            </div>
             <div class="form-check text-start my-3">
                 <input class="form-check-input" type="checkbox" value="remember-me" id="agree" required>
                 <label class="form-check-label" for="agree">Я соглашаюсь с
@@ -40,8 +58,8 @@
         <p></p>
         <details>
             <summary class="btn btn-outline-primary w-100 py-2">Требования к паролю</summary>
-
-            <div class="popover show bs-popover-top">
+            <p> </p>
+            <div class="popover show">
                 <div class="arrow"></div>
                 <h3 class="popover-header">Требования:</h3>
                 <div class="popover-body">
